--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,13 +11,13 @@
             "es2016",
             "es2015.promise"
         ],
-        "baseUrl": "./src"
+        "baseUrl": "./"
     },
     "files": [
         "./node_modules/moment/moment.d.ts"
     ],
     "include": [
-        "./src/**/*",
+        "./**/*",
     ],
     "exclude" : [
         "node_modules"
