--- a/package.json
+++ b/package.json
@@ -7,16 +7,21 @@
 		"@types/node": "*",
 		"@types/promise": "*",
 		"istanbul": "^0.4.5",
-		"mocha": "5.2.0",
-		"typescript": "~2.9.x"
+		"mocha": "5.2.0"
 	},
 	"dependencies": {
 		"ccxt": "~1.12.x",
+		"js-yaml": "~3.12.0",
+		"lodash": "^4.17.10",
 		"log4js": "2.9.0",
 		"pm2": "2.10.4",
-		"js-yaml": "~3.12.0"
+		"typescript": "^2.9.2",
+		"yargs": "~11.0.0"
 	},
 	"scripts": {
-		"test": "tsc"
+		"test": "make test",
+		"test-cov": "make test-cov",
+		"dev": "make dev",
+		"start": "make start"
 	}
 }
