--- a/etc/default.yaml
+++ b/etc/default.yaml
@@ -1,2 +1,21 @@
 log:
-    type: 'console'
+    pm2: false
+    appenders:
+        master:
+            type: "console"
+        main:
+            type: "console"
+        polling:
+            type: "console"
+    categories:
+        default:
+            appenders: [ "master", "main", "polling" ]
+            level: 'ALL'
+
+ipc:
+    master:
+        sock: dph.sock
+    main:
+        file: main
+    polling:
+        file: polling
