--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"@types/mocha": "*",
 		"@types/node": "*",
 		"@types/promise": "*",
+		"@types/fs-extra": "*",
 		"istanbul": "^0.4.5",
 		"mocha": "5.2.0"
 	},
@@ -16,7 +17,10 @@
 		"log4js": "2.9.0",
 		"pm2": "2.10.4",
 		"typescript": "^2.9.2",
-		"yargs": "~11.0.0"
+		"yargs": "~11.0.0",
+		"commander": "~2.15.1",
+		"chalk": "~2.4.1",
+		"fs-extra": "~6.0.1"
 	},
 	"scripts": {
 		"test": "make test",
