--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,8 @@
         "./**/*",
     ],
     "exclude" : [
-        "node_modules"
+        "node_modules",
+        "build",
+        "test_output"
     ]
 }
