--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
 		"log4js": "2.9.0",
 		"pm2": "2.10.4",
 		"typescript": "^2.9.2",
-		"yargs": "~11.0.0"
+		"yargs": "~11.0.0",
+		"commander": "~2.15.1",
+		"chalk": "~2.4.1"
 	},
 	"scripts": {
 		"test": "make test",
