Multi process framework (#1)
* add: etc config

add: multi process framework, process: 61%

add: multi process, process: 81%

* add: complete multi process framework

--- a/etc/default.yaml
+++ b/etc/default.yaml
@@ -1,2 +1,26 @@
 log:
-    type: 'console'
+    pm2: false
+    appenders:
+        stdout:
+            type: "stdout"
+    categories:
+        default:
+            appenders: [ "stdout" ]
+            level: 'ALL'
+        master:
+            appenders: [ "stdout" ]
+            level: "ALL"
+        main:
+            appenders: [ "stdout" ]
+            level: "ALL"
+        polling:
+            appenders: [ "stdout" ]
+            level: "ALL"
+
+ipc:
+    master:
+        sock: dph.sock
+    main:
+        file: main
+    polling:
+        file: polling
