--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
 	},
 	"dependencies": {
 		"ccxt": "~1.12.x",
+		"chalk": "~2.4.1",
+		"commander": "~2.15.1",
+		"fresh-mysql": "^1.0.1",
+		"fs-extra": "~6.0.1",
 		"js-yaml": "~3.12.0",
 		"lodash": "^4.17.10",
 		"log4js": "2.9.0",
 		"pm2": "2.10.4",
 		"typescript": "^2.9.2",
-		"yargs": "~11.0.0",
-		"commander": "~2.15.1",
-		"chalk": "~2.4.1",
-		"fs-extra": "~6.0.1"
+		"yargs": "~11.0.0"
 	},
 	"scripts": {
 		"test": "make test",
